# trusted-auction-relay

./: Cargo.toml  README.md  TODOs  buf.yaml
codegen/: Cargo.toml
codegen/src/: main.rs
proto/auctioneerapis/v1/: allocation_delivery.proto  payload_delivery.proto
proto/sequencerapis/v1/: get_allocation.proto  get_payload.proto
proto/trustedrelay/auctioneerapis/v1/: allocation_delivery.proto
proto/trustedrelay/sequencerapis/v1/: get_allocation.proto
protobuf-core/: Cargo.toml
protobuf-core/src/: lib.rs
protobuf-core/src/types/: address.rs  allocation.rs  allocation_delivery_request.rs  bid.rs  constants.rs  crypto.rs  mod.rs  sequencer_key.rs
relay/: Cargo.toml
relay/src/: main.rs  storage_trait.rs
relay/src/storage/: in_memory_store.rs  mod.rs
